--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="_1 w-row">
       <div class="column w-col w-col-3 w-col-stack w-col-small-small-stack w-col-tiny-tiny-stack"></div>
       <div class="w-col w-col-3 w-col-stack w-col-small-small-stack w-col-tiny-tiny-stack">
-        <a href="https://drive.google.com/file/d/13KbILkGaV9GiKavtj85ytoev0s6YOazd/view?usp=sharing" target="_blank" class="download w-button">Direct Download <br>(APK, v. 3.8.6.1)</a>
+        <a href="https://drive.google.com/u/1/uc?id=13KbILkGaV9GiKavtj85ytoev0s6YOazd&export=download" target="_blank" class="download w-button">Direct Download <br>(APK, v. 3.8.6.1)</a>
       </div>
       <div class="w-col w-col-3 w-col-stack w-col-small-small-stack w-col-tiny-tiny-stack">
-        <a href="https://drive.google.com/file/d/13KbILkGaV9GiKavtj85ytoev0s6YOazd/view?usp=sharing" target="_blank" class="download w-button">Download from Google<br>(v. 3.8.6.1)</a>
+        <a href="https://drive.google.com/u/1/uc?id=13KbILkGaV9GiKavtj85ytoev0s6YOazd&export=download" target="_blank" class="download w-button">Download from Google<br>(v. 3.8.6.1)</a>
       </div>
       <div class="column-2 w-col w-col-3 w-col-stack w-col-small-small-stack w-col-tiny-tiny-stack"></div>
     </div>
